# CDP

./: CDP.cabal  README.md  cabal.project  flake.nix
src/: Practice.hs
